--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,5 @@
 .page {
+  background-image: var(--bg-image);
   background-color: var(--bg-color);
   background-position: center;
   background-size: cover;
@@ -14,7 +15,6 @@
 }
 
 .header {
-  background-image: var(--bg-image);
   position: relative;
   display: grid;
   grid-template-rows: 1fr auto 1fr;
@@ -38,7 +38,7 @@
 .header__theme-menu-button {
   background-color: transparent;
   border: none;
-  padding: 0 13px;
+  padding: 0 5px;
   cursor: pointer;
   color: var(--accent-color);
   text-transform: lowercase;
@@ -179,6 +179,7 @@
 .title-decor {
   background-color: var(--accent-color);
   color: var(--text-accent-color);
+  width: 97%;
 }
 
 .content-section--tips {
@@ -230,6 +231,7 @@
 .gallery {
   padding: 0;
   position: relative;
+  margin-left: 21px;
 }
 
 .gallery__title {
@@ -237,7 +239,7 @@
   margin-bottom: 20px;
   font-weight: 700;
   line-height: 1.3;
-  height: 20px;
+  height: 18px;
 }
 
 .gallery__grid {
@@ -314,6 +316,10 @@
 }
 
 @media (max-width: 767px) {
+  .page__container {
+    max-width: 100%;
+  }
+
   .header {
     padding: 10px 0;
   }
@@ -324,13 +330,25 @@
   }
   
   .header__title {
-    font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-    margin-top: 55px;
+    font-size: clamp(7.25rem, 2.0115rem + 0.0178vw, 8.5rem);
+    margin-top: 0px;
+    letter-spacing: 0px;
   }
   
   .header__text {
     max-width: 100%;
-    margin-bottom: 45px;
+    margin-bottom: 0px;
+    margin-right: 0px;
+    padding: 0 0 0 0;
+  }
+
+  .header__theme-menu {
+    margin-top: 0px;
+    margin-right: 10px;;
+  }
+
+  .title-decor {
+    width: 100%;
   }
   
   .content {
@@ -338,12 +356,58 @@
   }
   
   .content-section {
-    margin-bottom: 30px;
+    margin-bottom: 42px;
     gap: 15px;
+  }
+
+  .content-section--factors .text-card:nth-of-type(2),
+  .content-section--factors .text-card:nth-of-type(3) {
+    margin-top: 14px;
   }
   
   .content-section__title {
-    margin-bottom: 12px;
+    margin-bottom: 0px;
+    margin-top: 11px;
+  }
+
+  .tips-header {
+    margin-top: 16px;
+    margin-bottom: 9px;;
+  }
+
+  .tips-header__subtitle {
+    margin-top: 16px;
+    margin-bottom: 20px;
+    height: 47px;
+    padding: 0 0 0 0px;
+  }
+
+  .content-section--tips .text-card--advice:nth-child(2) .text-card__paragraph {
+    padding-top: 6px;
+  }
+  
+  .content-section--tips .text-card--advice:nth-child(3) .text-card__paragraph {
+    padding-top: 4px;
+  }
+  
+  .content-section--tips .text-card--advice:nth-child(4) .text-card__paragraph {
+    padding-top: 2px;
+  }
+  
+  .content-section--tips .text-card--advice:nth-child(5) .text-card__paragraph {
+    padding-top: 0px;
+  }
+
+  .text-card--advice .text-card__title {
+    padding: 0 0 0 0;
+  }
+
+  .content-section--tips .text-card--advice {
+    margin-bottom: 10px;
+  }
+
+  .text-card {
+    margin-top: 3px;
   }
   
   .content-section__body {
@@ -353,10 +417,24 @@
   .text-card__content {
     padding-top: 8px;
   }
-  
+
+  .gallery {
+    margin-left: 0px;
+  }
+
+  .gallery__title {
+    margin-bottom: 16px;;
+  }
+
   .gallery__grid {
     grid-template-columns: 1fr;
-    gap: 6px;
+    gap: 10px;
+  }
+
+  .footer__title {
+    margin-top: 54px;
+    font-size: clamp(6.25rem, 7.0115rem + 0.0178vw, 7.5rem);
+    margin-left: 4px;
   }
   
   .decorated-zone::before {
@@ -370,9 +448,9 @@
   }
 }
 
-@media (min-width: 768px) and (max-width: 1023px) {
+@media (min-width: 768px) and (max-width: 1024px) {
   .page__container {
-    padding: 0 20px;
+    padding: 0 0px;
   }
   
   .header {
@@ -381,60 +459,124 @@
   
   .header__rec {
     top: 20px;
-    right: 38px;
+    right: 49px;
   }
   
   .header__title {
-    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-    margin-top: 75px;
+    font-size: clamp(5.5rem, 0.5625rem + 12.4531vw, 7.8125rem);
+    margin-top: 15px;
+    letter-spacing: 11px;
   }
   
   .header__text {
-    max-width: 491px;
-    margin-bottom: 162px;
+    max-width: 364px;
+    margin-bottom: 2px;
+    margin-right: 20px;
+  }
+
+  .header__theme-menu {
+    margin-right: 31px;
+    margin-top: 0px;
+    margin-bottom: 2px;
+  }
+
+  .header__theme-menu-list {
+    gap: 15px;
   }
   
   .content {
-    padding: 50px 0 30px;
+    padding: 56px 0 30px;
   }
   
+  .content-section {
+    margin-left: 21px;
+  }
+
   .content-section--why {
     display: grid;
     grid-template-columns: 1fr 2fr;
-    gap: 20px;
+    gap: 10px;
     align-items: start;
     margin-bottom: 60px;
+    margin-left: 20px;
   }
   
   .content-section__title {
     margin-bottom: 0;
     padding-top: 5px;
+    width: 211px;
   }
   
   .content-section__body {
-    gap: 20px;
+    gap: 0px;
   }
   
   .content-section__body--card-column {
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(1, 1fr);
     gap: 15px;
   }
-  
+
+  .text-card__paragraph {
+    margin-top: 4px;
+  }
+
+  .title-decor {
+    margin-top: 6px;
+    margin-bottom: 0px;
+  }
+
+  .tips-header__subtitle {
+    margin-bottom: 19px;
+    padding: 0 0 0 0;
+  }
+
+  .text-card__content {
+    padding-top:10px;
+  }
+
+  .text-card--advice {
+    margin-bottom: 30px;
+  }
+
+  .text-card--advice:nth-child(3) .text-card__paragraph,
+  .text-card--advice:nth-child(4) .text-card__paragraph,
+  .text-card--advice:nth-child(5) .text-card__paragraph {
+    margin-top: 7px;
+  }
+
+  .text-card--advice:nth-child(3),
+  .text-card--advice:nth-child(4),
+  .text-card--advice:nth-child(5) {
+    margin-top: 20px; /* или нужное вам значение */
+  }
+
+  .text-card--advice .text-card__title {
+    padding: 0px 0px;
+  }
+
+  .text-card--advice .text-card__paragraph {
+    margin: 0px;
+    padding: 0 0 0 0;
+  }
+
   .tips-header {
     display: grid;
     grid-template-columns: 1fr 2fr;
-    gap: 15px;
-    margin-bottom: 10px;
+    gap: 11px;
+    margin-bottom: 60px;
+    margin-top: 44px;
   }
 
   .content-section--tips .content-section__body--tips {
-    margin-left: 20px;
+    margin-left: 0px;
   }
 
   .gallery__grid {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, auto);
-    gap: 15px;
+    gap: 20px;
+    margin-top: 25px;
+    margin-right: 19px;
   }
   
   .gallery__image:nth-child(1) {
@@ -466,10 +608,21 @@
     grid-row: 3 / 4;
     height: 318px;
   }
+
+  .footer__title {
+    font-size: clamp(7.25rem, 6.0115rem + 1.0178vw, 7.5rem);
+    letter-spacing: 3px;
+    color: var(--title-color);
+    text-shadow: 2px 2px 0 var(--accent-color);
+    font-weight: 700;
+    line-height: 0.825;
+    margin-bottom: 0;
+    margin-top: 61px;
+  }
   
   .decorated-zone::before {
     top: 20px;
-    right: 0;
+    right: 20px;
   }
   
   .decorated-zone::after {
@@ -480,7 +633,7 @@
 
 @media (min-width: 1024px) {
   .page__container {
-    padding: 0 20px;
+    padding: 0 0px;
   }
   
   .header {
@@ -500,11 +653,11 @@
   
   .header__rec {
     top: 20px;
-    right: 29px;
+    right: 48px;
   }
   
   .header__title {
-    font-size: clamp(9.0rem, 0.0000rem + 14.4531vw, 9.8125rem);
+    font-size: clamp(9.9rem, 0.0000rem + 14.4531vw, 9.8125rem);
     margin-top: 3px;
     letter-spacing: 0px;
   }
@@ -512,7 +665,8 @@
   .header__text {
     max-width: 490px;
     width: 100%;
-    margin-bottom: 18px;
+    margin-bottom: 21px;
+    margin-right: 19px;
     padding: 0 0 0 0;
   }
   
@@ -526,8 +680,9 @@
     grid-template-columns: 1fr 2fr;
     gap: 10px;
     align-items: start;
-    margin-bottom: 77px;
+    margin-bottom: 53px;
     margin-top: 59px;
+    margin-left: 13px;
   }
   
   .content-section__title {
@@ -543,39 +698,49 @@
     padding-top: 11px;
   }
 
+  .title-decor {
+    margin-top: 4px;
+  }
+
   .content-section--factors {
-    margin-bottom: 78px;
+    margin-bottom: 8px;
     padding: 0px 0;
+    margin-left: 21px;
   }
   
   .content-section__body--card-column {
     grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
+    gap: 12px;
+    width: 99%;
   }
 
   .content-section--tips {
     margin-bottom: 80px;
     display: grid;
     gap: 0;
+    margin-left: 0px;
+    margin-top: 38px;
   }
   
   .content-section--tips .tips-header {
     display: grid;
     grid-template-columns: 1fr 2fr;
-    gap: 10px;
+    gap: 1px;
     margin-bottom: 0;
     align-items: start;
+    margin-left: 21px;
   }
   
   .content-section--tips .tips-header__main {
     font-size: 18px;
     margin: 0;
     color: var(--accept-color);
+    margin-top: 0px;
   }
   
   .content-section--tips .tips-header__subtitle {
     margin: 0;
-    padding: 4px 0px;
+    padding: 0px 0px;
     height: auto;
     background-color: var(--accent-color);
     color: var(--text-accent-color);
@@ -591,11 +756,13 @@
     gap: 0;
     margin-left: auto;
     margin-top: 0;
+    margin-bottom: 6px;
   }
   
   .content-section--tips .text-card--advice {
     margin-bottom: 0;
     padding-top: 0;
+    margin-top: 0px;
   }
   
   .content-section--tips .text-card--advice .text-card__title {
@@ -621,6 +788,8 @@
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, auto);
     gap: 20px;
+    width: 98%;
+    margin-top: 22px;
   }
   
   .gallery__image:nth-child(1) {
@@ -655,12 +824,12 @@
   
   .footer__title {
     font-size: clamp(9.5rem, -0.4375rem + 14.4531vw, 9.8125rem);
-    margin-top: 89px;
+    margin-top: 85px;
   }
   
   .decorated-zone::before {
     top: 20px;
-    right: 0px;
+    right: 20px;
   }
   
   .decorated-zone::after {
